src/stylesheets/styles.scss
body {
  background: skyblue;
  position: relative;
  min-height: 100%;
  min-height: 100vh;
}
#recipe-footer {
  position: absolute;
  right: 0px;bottom:0px;left:0px;
}

#add-recipe{
  position: absolute;
  bottom: 195px;
  right: 600px;
}

.text-recipe{
  background: white;
}

